@@ -195,26 +195,13 @@ DbStore.prototype.fetch = function(databaseName) {
 DbStore.prototype.emit = function(event, message, object, reset, filterDb, rethrow_if_no_listeners) {
   var emitted = false;
 
-  if(reset) {
-    while(this._dbs.length > 0) {
-      var db = this._dbs.shift();
-      // Only emit if there is a listener
-      if(db.listeners(event).length > 0) {
-        if(filterDb == null  || filterDb.databaseName !== db.databaseName 
-          || filterDb.tag !== db.tag) {
-          db.emit(event, message, object == null ? db : object);
-          emitted = true;
-        }
-      }
-    }
-  } else {
-    for(var i = 0; i < this._dbs.length; i++) {
-      if(this._dbs[i].listeners(event).length > 0) {
-        if(filterDb == null || filterDb.databaseName !== this._dbs[i].databaseName 
-          || filterDb.tag !== this._dbs[i].tag) {
-          this._dbs[i].emit(event, message, object == null ? this._dbs[i] : object);
-          emitted = true;
-        }
+  // Emit the events
+  for(var i = 0; i < this._dbs.length; i++) {
+    if(this._dbs[i].listeners(event).length > 0) {
+      if(filterDb == null || filterDb.databaseName !== this._dbs[i].databaseName 
+        || filterDb.tag !== this._dbs[i].tag) {
+        this._dbs[i].emit(event, message, object == null ? this._dbs[i] : object);
+        emitted = true;
       }
     }
   }
