@@ -368,8 +368,12 @@ Server.prototype.connect = function(dbInstance, options, callback) {
       // Save document returned so we can query it
       _server.isMasterDoc = reply.documents[0];
       
-      if(self.emitOpen)
+      if(self.emitOpen) {        
         _server._emitAcrossAllDbInstances(_server, eventReceiver, "open", null, returnIsMasterResults ? reply : null, null);        
+        self.emitOpen = false;
+      } else {
+        _server._emitAcrossAllDbInstances(_server, eventReceiver, "reconnect", null, returnIsMasterResults ? reply : null, null);        
+      }
 
       // If we have it set to returnIsMasterResults
       if(returnIsMasterResults) {
