@@ -1,6 +1,8 @@
 1.3.19 2013-08-21
 -----------------
 - Correctly rethrowing errors after change from event emission to callbacks, compatibility with 0.10.X domains without breaking 0.8.X support.
+- Small fix to return the entire findAndModify result as the third parameter (Issue #1068)
+- No removal of "close" event handlers on server reconnect, emits "reconnect" event when reconnection happens. Reconnect Only applies for single server connections as of now as semantics for ReplSet and Mongos is not clear (Issue #1056)
 
 1.3.18 2013-08-10
 -----------------
